[gd_scene load_steps=2 format=3 uid="uid://bu8q3xpdq0fpm"]

[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="1_fwtnf"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_fwtnf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -20.0
offset_right = 52.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "New"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save 1"

[node name="Label" type="Label" parent="."]
offset_left = 32.0
offset_top = 61.0
offset_right = 72.0
offset_bottom = 84.0

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
